--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "predeploy": "vite build",
     "deploy": "gh-pages -d dist",
-    "build": "tsc -b && vite build",
+    "build": "vite src -d build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
