--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-scroll": "^1.9.0",
+    "sass": "^1.82.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
