--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-scroll": "^1.9.0",
+    "scss": "^0.2.4",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
