--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^7.0.2",
     "react-scroll": "^1.9.0",
     "scss": "^0.2.4",
